EXR Compression method set in UI does not always get passed correctly to the actual OpenEXR writing code #46826

Closed
opened 2015-11-20 10:32:47 +01:00 by Greg Zaal · 6 comments
Member

System Information
Windows 10 64 bit, 980TI

Blender Version
Broken: Recent master (cb1cb63)

Short description of error
When saving a render to the OpenEXR format, all the codecs (except the first two- [x]) produce files of exactly the same size. This makes me think that none of them are actually doing any compression.

I tested both RGB and RGBA, Float (Half) and Float (Full) - the Codec option still makes no difference.

  • DWAB and DWAA seem to be the only codecs that produce different size files.

Exact steps for others to reproduce the error

Save any image (e.g. a render of the default cube) several times using the OpenEXR format, and set the Codec to something different each time.
Here's a zip of my own test: exr_test.zip

**System Information** Windows 10 64 bit, 980TI **Blender Version** Broken: Recent master (cb1cb63) **Short description of error** When saving a render to the OpenEXR format, all the codecs (except the first two- [x]) produce files of exactly the same size. This makes me think that none of them are actually doing any compression. I tested both RGB and RGBA, Float (Half) and Float (Full) - the Codec option still makes no difference. - [x] DWAB and DWAA seem to be the only codecs that produce different size files. **Exact steps for others to reproduce the error** Save any image (e.g. a render of the default cube) several times using the OpenEXR format, and set the Codec to something different each time. Here's a zip of my own test: [exr_test.zip](https://archive.blender.org/developer/F256355/exr_test.zip)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @GregZaal

Added subscriber: @GregZaal

Added subscriber: @mont29

Added subscriber: @mont29

The problem is not with OpenEXR compression, but within Blender somewhere, OpenEXR is not always called with the compress option actually shown in UI, not sure yet why… :/

The problem is not with OpenEXR compression, but within Blender somewhere, OpenEXR is not always called with the compress option actually shown in UI, not sure yet why… :/
Bastien Montagne changed title from EXR Compression methods don't work to EXR Compression method set in UI does not always get passed correctly to the actual OpenEXR writing code 2015-11-20 18:10:02 +01:00
Bastien Montagne self-assigned this 2015-11-20 18:10:02 +01:00

This issue was referenced by 9a2290a30b

This issue was referenced by 9a2290a30b478f6bf0863796d8129b9fe7e368f1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46826
No description provided.