Fix T46826: EXR Compression method set in UI does not always get passed correctly to the actual OpenEXR writing code.